tests/paczka1/fuzzy1/47419668.err
Error in line 1: A278 S644 77,0
Error in line 5: q7wUlXLYhN S644 15,6
Error in line 4: BqHOdgq4RT A278 5,3
Error in line 9: KcFOME6 A367 49,4
Error in line 13: KcFOME6 S644 29,4
Error in line 23: 3mhm A17 36,7
Error in line 29: q7wUlXLYhN A278 59,2
Error in line 21: BqHOdgq4RT A367 19,0
Error in line 40: BqHOdgq4RT S644 -1,9
